--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -15,7 +15,7 @@
         <a href="/edit-post/<%= post._id %>" class="btn">Edit</a>
 
         <form action="/delete-post/<%= post._id %>?_method=DELETE" method="POST">
-          <input type="submit" value="Delete" class="btn-delete btn">
+          <input type="submit" value="Delete" class=" btn">
         </form>
 
       </div>
