--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= locals.title %></title>
+  <title>Blog Connect Hub</title>
   <meta name="description" content="<%= locals.description %>">
   <link rel="stylesheet" href="/css/style.css">
   <script type="text/javascript" defer src="/js/script.js"></script>
@@ -12,13 +12,19 @@
 <body>
   
   <%- include('../partials/search.ejs')  %>
+
   <div class="container">
+
     <%- include('../partials/header.ejs')  %>
+
     <main class="main">
       <%- body %>
     </main>
+
     <%- include('../partials/footer.ejs')  %>
+
   </div>  
 
 </body>
+</html>
 </html>
