--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="/" class="header__logo">NodeJs</a>
+  <a href="/" class="header__logo">Blog Connect Hub</a>
 
   <nav class="header__nav">
     <ul>
